<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewToFinish"
        android:text="@string/labelToFinishWork"
        android:textSize="20sp"/>
    <com.wardziniak.worktimestopwatch.ui.widgets.TimeCounterView
        android:id="@+id/timeCounterToFinish"
        custom:count_direction="down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFromStart"
        android:text="@string/labelFromStartWork"
        android:textSize="20sp"/>
    <com.wardziniak.worktimestopwatch.ui.widgets.TimeCounterView
        android:id="@+id/timeCounterFromStart"
        custom:count_direction="up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnExtendWorkLabel"
            android:drawableLeft="@drawable/construction_worker"
            android:id="@+id/btnExtendWork"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnFinishWorkLabel"
            android:drawableLeft="@drawable/coctail"
            android:id="@+id/btnFinishWork"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnCancelWorkLabel"
            android:drawableLeft="@drawable/close_window"
            android:id="@+id/btnCancelWork"/>
    </LinearLayout>
</LinearLayout>